<package format="3">
  <name>lighthouse_weather_station</name>
  <version>0.0.0</version>
  <description>Imitation of a weather station on a lighthouse</description>
  <maintainer email="anastasiia.a.markova@gmail.com">Anastasiia Markova</maintainer>
<license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
